<resources>
    <string name="app_name">The To-Do List</string>
    <string name="daily_tasks">Current Date</string>
    <string name="add_task">Add Task</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="enter_task_name">Enter Task Name</string>
    <string name="add_a_new_task">Add A New Task</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
</resources>